RESOLVED FIXED 283225
[WebGPU] https://threejs.org/examples/?q=bat#webgpu_mesh_batch is slow with 10k instances
https://bugs.webkit.org/show_bug.cgi?id=283225
Summary [WebGPU] https://threejs.org/examples/?q=bat#webgpu_mesh_batch is slow with 1...
Mike Wyrzykowski
Reported 2024-11-15 19:21:40 PST
[WebGPU] https://threejs.org/examples/?q=bat#webgpu_mesh_batch is slow with 10k instances
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-15 19:22:31 PST
Mike Wyrzykowski
Comment 2 2024-11-16 12:41:44 PST
Mike Wyrzykowski
Comment 3 2024-11-22 21:01:18 PST
*** Bug 283224 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-11-24 19:13:14 PST
Committed 287050@main (02cba9a8abd7): <https://commits.webkit.org/287050@main> Reviewed commits have been landed. Closing PR #36750 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.