[WebGPU] https://threejs.org/examples/?q=bat#webgpu_mesh_batch is slow with 10k instances https://bugs.webkit.org/show_bug.cgi?id=283225 rdar://140017948

Reviewed by NOBODY (OOPS!).

We previously maintained a single cache per drawIndex call which allowed repeated
calls to drawIndexed to skip validation provided the index buffer contents did not change.

This heavily penalized drawIndexed calls where a single index buffer was used across
multiple draw calls with different offsets into the index buffer.

Fix this by caching the calls which are known to be valid, directly going to the DIP
path when the call is known to be safe. The cache is cleared when the index buffer
is mutated in any fashion.

This allows us to increase the instance count to 20k with realtime performance, previously
it was 0-1fps on this sample at 10k instances and caused device lost due to performance
on some devices.

Testing: CTS and existing tests ensuring zero out of bounds reads continue to pass.

* Source/WebGPU/WebGPU/Buffer.h:
(WebGPU::Buffer::didReadOOB const):
(WebGPU::Buffer::didReadOOB):
* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::Buffer):
(WebGPU::makeKey):
(WebGPU::makeValue):
(WebGPU::Buffer::canSkipDrawIndexedValidation const):
(WebGPU::Buffer::drawIndexedValidated):
(WebGPU::Buffer::indirectBufferInvalidated):
* Source/WebGPU/WebGPU/Device.mm:
* Source/WebGPU/WebGPU/Queue.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::makeRenderBundleICBWithResources):
(WebGPU::RenderBundleEncoder::drawIndexed):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::executeBundles):