Source/WebGPU/WebGPU/Device.mm
@@ -698,13 +698,17 @@ id<MTLRenderPipelineState> Device::indexBufferClampPipeline(MTLIndexType indexTy
     using namespace metal;
     [[vertex]] void vsUshort(device const ushort* indexBuffer [[buffer(0)]], device MTLDrawIndexedPrimitivesIndirectArguments& indexedOutput [[buffer(1)]], const constant uint* data [[buffer(2)]], uint indexId [[vertex_id]]) {
         ushort vertexIndex = data[primitiveRestart] + indexBuffer[indexId];
-        if (vertexIndex + indexedOutput.baseVertex >= data[vertexCount] + data[primitiveRestart])
+        if (vertexIndex + indexedOutput.baseVertex >= data[vertexCount] + data[primitiveRestart]) {
             indexedOutput.indexCount = 0u;
+            *(&indexedOutput.baseInstance + 1) = 1;
+        }
     }
     [[vertex]] void vsUint(device const uint* indexBuffer [[buffer(0)]], device MTLDrawIndexedPrimitivesIndirectArguments& indexedOutput [[buffer(1)]], const constant uint* data [[buffer(2)]], uint indexId [[vertex_id]]) {
         uint vertexIndex = data[primitiveRestart] + indexBuffer[indexId];
-        if (vertexIndex + indexedOutput.baseVertex >= data[vertexCount] + data[primitiveRestart])
+        if (vertexIndex + indexedOutput.baseVertex >= data[vertexCount] + data[primitiveRestart]) {
             indexedOutput.indexCount = 0u;
+            *(&indexedOutput.baseInstance + 1) = 1;
+        }
     })" /* NOLINT */ options:options error:&error];
         if (error) {
             WTFLogAlways("%@", error);
@@ -910,7 +914,8 @@ id<MTLFunction> Device::icbCommandClampFunction(MTLIndexType indexType)
         /* NOLINT */ id<MTLLibrary> library = [m_device newLibraryWithSource:@R"(
     using namespace metal;
     struct ICBContainer {
-        command_buffer commandBuffer [[ id(0) ]];
+        device uint* outOfBoundsRead [[ id(0) ]];
+        command_buffer commandBuffer [[ id(1) ]];
     };
     struct IndexDataUshort {
         uint64_t renderCommand { 0 };
@@ -945,6 +950,7 @@ id<MTLFunction> Device::icbCommandClampFunction(MTLIndexType indexType)
         uint32_t k = (data.primitiveType == primitive_type::triangle_strip || data.primitiveType == primitive_type::line_strip) ? 1 : 0;
         uint32_t vertexIndex = data.indexBuffer[indexId] + k;
         if (data.baseVertex + vertexIndex >= data.minVertexCount + k) {
+            *icb_container->outOfBoundsRead = 1;
             render_command cmd(icb_container->commandBuffer, data.renderCommand);
             cmd.draw_indexed_primitives(data.primitiveType,
                 0u,
@@ -963,6 +969,7 @@ id<MTLFunction> Device::icbCommandClampFunction(MTLIndexType indexType)
         uint32_t k = (data.primitiveType == primitive_type::triangle_strip || data.primitiveType == primitive_type::line_strip) ? 1 : 0;
         ushort vertexIndex = data.indexBuffer[indexId] + k;
         if (data.baseVertex + vertexIndex >= data.minVertexCount + k) {
+            *icb_container->outOfBoundsRead = 1;
             render_command cmd(icb_container->commandBuffer, data.renderCommand);
             cmd.draw_indexed_primitives(data.primitiveType,
                 0u,
